--- a/parts/header-fixed.html
+++ b/parts/header-fixed.html
@@ -1,1 +1,7 @@
-<!-- wp:pattern {"slug":"upa25/header-fixed"} /-->
+<!-- wp:group {"className":"is-style-header-fixed is-style-section-base","style":{"border":{"bottom":{"color":"var:preset|color|base-4","width":"1px"}},"spacing":{"padding":{"top":"var:preset|spacing|20","bottom":"var:preset|spacing|20"}}},"layout":{"type":"constrained"}} -->
+<div class="wp-block-group is-style-header-fixed is-style-section-base" style="border-bottom-color:var(--wp--preset--color--base-4);border-bottom-width:1px;padding-top:var(--wp--preset--spacing--20);padding-bottom:var(--wp--preset--spacing--20)"><!-- wp:group {"align":"wide","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+<div class="wp-block-group alignwide"><!-- wp:site-logo {"width":60,"shouldSyncIcon":false} /-->
+
+<!-- wp:navigation {"ref":1971,"openSubmenusOnClick":true,"metadata":{"ignoredHookedBlocks":["woocommerce/customer-account","woocommerce/mini-cart"]},"layout":{"type":"flex","justifyContent":"right"}} /--></div>
+<!-- /wp:group --></div>
+<!-- /wp:group -->
